--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ h2 {
   margin: 50px;
   font-family: 'Silkscreen', cursive;
   padding-top: 15px;
+  padding-bottom:10px;
   font-weight: normal;
   font-size: 2.0rem;
   color: #533483;
